refactor(service): streamline PaymentInstallmentService methods by consolidating response mapping and enhancing query operations for improved readability and maintainability